--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test-pull-request</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
-        Ici ma nav' de ouf
+        <p>Ici ma nav' de ouf</p>
+        <p>Pas mal non ???</p>
     </header>
 
     <main>
