--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Il faut toujours un H1</h1>
         <p>Ici ma nav' de ouf</p>
         <p>Pas mal non ???</p>
     </header>
