--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h2>On m'a dit de mettre un H2</h2>
         <p>Ici ma nav' de ouf</p>
         <p>Pas mal non ???</p>
     </header>
