--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <ul>
             <li>aze</li>
             <li>qsd</li>
+            <li>et j'ajoute ici un li</li>
             <li>wxc</li>
         </ul>
     </main>
